@@ -2,6 +2,8 @@
     - you can set any string as separator
     - fixed memory leak and connection increasing bug, and query_buider method return new object.
     - added EXPERIMENTAL exclude_table attribute
+    - added EXPERIMENTAL show_typename method
+    - added EXPERIMENTAL show_datatype method
 0.1711
     - renamed EXPERIMENTAL available_type_name to available_typename
     - renamed EXPERIMENTAL available_data_type to available_datatype
